--- a/index.html
+++ b/index.html
@@ -1,103 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Jungle TD</title>
-    <link rel="shortcut icon" href="TemplateData/progressLogo.Dark.png" />
-    <link rel="stylesheet" href="TemplateData/style.css" />
-    <meta property="og:title" content="Jungle TD" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Jungle TD" />
-    <meta
-      property="og:description"
-      content="Jungle TD is a a 3d tower defense game with a theme of jungle, your objective is to protect the base by placing right defenses at right spots. Monsters will start coming in waved as soon as battle is started. Plan your strategy to choose the effective defense against monsters. Don't let them reach the tent. Good Luck"
-    />
-
-    <style type="text/css">
-      body {
-        margin: 0px;
-        border: none;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-      }
-      #gameContainer {
-        background: url("TemplateData/background.jpg") no-repeat center center !important;
-
-        background-size: cover !important;
-      }
-    </style>
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js"></script>
-    <script type="text/javascript">
-      var adInitialized = false;
-      var gameInstance = UnityLoader.instantiate(
-        "gameContainer",
-        "Build/WebGL.json",
-        { onProgress: UnityProgress }
-      );
-      var showAdsCalled = false;
-      window["GD_OPTIONS"] = {
-        gameId: "c3ba63ed4b7a4ce6816bf7cfd2e1dc86",
-        advertisementSettings: {
-          autoplay: false,
-        },
-        onEvent: function (event) {
-          switch (event.name) {
-            case "SDK_GAME_START":
-              console.log("Game Resumed");
-              if (showAdsCalled) {
-                showAdsCalled = false;
-                gameInstance.SendMessage("GameManager", "On_JS_CallBack");
-              }
-              break;
-            case "SDK_GAME_PAUSE":
-              console.log("Game Paused");
-
-              break;
-            case "SDK_READY":
-              console.log("GD SDK Ready");
-              adInitialized = true;
-              break;
-            case "SDK_ERROR":
-              break;
-          }
-        },
-      };
-      (function (d, s, id) {
-        var js,
-          fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s);
-        js.id = id;
-        js.src =
-          "patch/js/gd-sdk.js?html5.api.gamedistribution.com/main.min.js";
-        fjs.parentNode.insertBefore(js, fjs);
-      })(document, "script", "gamedistribution-jssdk");
-      function Show_Ads() {
-        console.log("Show Ads Called");
-        if (adInitialized) {
-          showAdsCalled = true;
-          console.log("<Game Distribution> Show Ads Called");
-          window["gdsdk"]["showBanner"]();
-        } else {
-          gameInstance.SendMessage("GameManager", "On_JS_CallBack");
-        }
-      }
-    </script>
-  </head>
-  <body style="overflow: hidden">
-    <div
-      class="webgl-content"
-      style="width: 100%; height: 100%; position: absolute; margin: auto"
-    >
-      <div
-        id="gameContainer"
-        style="width: 100%; height: 100%; position: absolute; margin: auto"
-      ></div>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Jungle TD</title><link rel="stylesheet" href="TemplateData/style.css" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><style type="text/css">body{ margin: 0px; border: none;} canvas{ width: 100%; height: 100%; position: absolute;} #gameContainer{ background: url("TemplateData/background.jpg") no-repeat center center !important; background-size: cover !important;} </style><script src="TemplateData/UnityProgress.js"></script><script src="Build/UnityLoader.js"></script><script type="text/javascript">var adInitialized=false; var gameInstance=UnityLoader.instantiate( "gameContainer", "Build/WebGL.json", { onProgress: UnityProgress} ); var showAdsCalled=false; window["GD_OPTIONS"]={ gameId: "c3ba63ed4b7a4ce6816bf7cfd2e1dc86", advertisementSettings:{ autoplay: false,}, onEvent: function (event){ switch (event.name){ case "SDK_GAME_START": console.log("Game Resumed"); if (showAdsCalled){ showAdsCalled=false; gameInstance.SendMessage("GameManager", "On_JS_CallBack");} break; case "SDK_GAME_PAUSE": console.log("Game Paused"); break; case "SDK_READY": console.log("GD SDK Ready"); adInitialized=true; break; case "SDK_ERROR": break;}},}; (function (d, s, id){ var js, fjs=d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js=d.createElement(s); js.id=id; js.src="patch/js/gd-sdk.js?html5.api.gamedistribution.com/main.min.js"; fjs.parentNode.insertBefore(js, fjs);})(document, "script", "gamedistribution-jssdk"); function Show_Ads(){ console.log("Show Ads Called"); if (adInitialized){ showAdsCalled=true; console.log("<Game Distribution>Show Ads Called"); window["gdsdk"]["showBanner"]();} else{ gameInstance.SendMessage("GameManager", "On_JS_CallBack");}} </script><link rel="stylesheet" href="toast.css" /></head><body style="overflow: hidden"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="webgl-content" style="width: 100%; height: 100%; position: absolute; margin: auto" ><div id="gameContainer" style="width: 100%; height: 100%; position: absolute; margin: auto" ></div></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
