--- a/index.html
+++ b/index.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Madalin Stunt Cars 2</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Madalin Stunt Cars 2" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="img/logo.jpg" />
-    <script src="js/UnityLoader.js"></script>
-  </head>
-  <body style="margin: 0; overflow: hidden">
-    <div
-      class="webgl-content"
-      style="width: 100%; height: 100%; overflow: hidden"
-    >
-      <div
-        id="gameContainer"
-        style="width: 100%; height: 100%; overflow: hidden"
-      ></div>
-    </div>
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
-      </div>
-    </div>
-    <script src="js/popup.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Madalin Stunt Cars 2</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="style.css" /><script src="js/UnityLoader.js"></script><link rel="stylesheet" href="toast.css" /></head><body style="margin: 0; overflow: hidden"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="webgl-content" style="width: 100%; height: 100%; overflow: hidden" ><div id="gameContainer" style="width: 100%; height: 100%; overflow: hidden" ></div></div><div id="popup" class="popup"><div class="popup-content"><h2 id="popup-title" style="color: blue"></h2><div id="popup-scrollable-content" class="popup-scrollable-content" ></div><div class="popup-buttons"><button id="yesButton" class="popup-button">Yes</button ><button id="noButton" class="popup-button">No</button></div></div></div><script src="js/popup.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
