--- a/index.html
+++ b/index.html
@@ -1,51 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Menja</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#2c3f51" />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <!-- partial:index.partial.html -->
-    <!-- Game canvas -->
-    <canvas id="c"></canvas>
-
-    <!-- Gameplay HUD -->
-    <div class="hud">
-      <div class="hud__score">
-        <div class="score-lbl"></div>
-        <div class="cube-count-lbl"></div>
-      </div>
-      <div class="pause-btn"><div></div></div>
-      <div class="slowmo">
-        <div class="slowmo__bar"></div>
-      </div>
-    </div>
-
-    <!-- Menu System -->
-    <div class="menus">
-      <div class="menu menu--main">
-        <h1>MENJA</h1>
-        <button type="button" class="play-normal-btn">PLAY GAME</button>
-        <button type="button" class="play-casual-btn">CASUAL MODE</button>
-      </div>
-      <div class="menu menu--pause">
-        <h1>Paused</h1>
-        <button type="button" class="resume-btn">RESUME GAME</button>
-        <button type="button" class="menu-btn--pause">MAIN MENU</button>
-      </div>
-      <div class="menu menu--score">
-        <h1>Game Over</h1>
-        <h2>Your Score:</h2>
-        <div class="final-score-lbl"></div>
-        <div class="high-score-lbl"></div>
-        <button type="button" class="play-again-btn">PLAY AGAIN</button>
-        <button type="button" class="menu-btn--score">MAIN MENU</button>
-      </div>
-    </div>
-    <!-- partial -->
-    <script src="./script.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8" /><title>Menja</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><meta name="theme-color" content="#2c3f51" /><link rel="stylesheet" href="./style.css" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><canvas id="c"></canvas><div class="hud"><div class="hud__score"><div class="score-lbl"></div><div class="cube-count-lbl"></div></div><div class="pause-btn"><div></div></div><div class="slowmo"><div class="slowmo__bar"></div></div></div><div class="menus"><div class="menu menu--main"><h1>MENJA</h1><button type="button" class="play-normal-btn">PLAY GAME</button><button type="button" class="play-casual-btn">CASUAL MODE</button></div><div class="menu menu--pause"><h1>Paused</h1><button type="button" class="resume-btn">RESUME GAME</button><button type="button" class="menu-btn--pause">MAIN MENU</button></div><div class="menu menu--score"><h1>Game Over</h1><h2>Your Score:</h2><div class="final-score-lbl"></div><div class="high-score-lbl"></div><button type="button" class="play-again-btn">PLAY AGAIN</button><button type="button" class="menu-btn--score">MAIN MENU</button></div></div><script src="./script.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
