--- a/index.html
+++ b/index.html
@@ -1,85 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Minesweeper</title>
-    <meta charset="utf-8" />
-
-    <link
-      rel="stylesheet"
-      media="screen"
-      type="text/css"
-      href="css/styles.css"
-    />
-    <link
-      href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700"
-      rel="stylesheet"
-      type="text/css"
-    />
-
-    <script src="js/jquery.min.js"></script>
-
-    <script type="text/javascript" src="js/minesweeper.js"></script>
-  </head>
-
-  <body>
-    <div class="container">
-      <header class="row">
-        <div class="sixcol">
-          <h1>Minesweeper</h1>
-        </div>
-        <div class="sixcol last"></div>
-      </header>
-      <section class="row">
-        <div class="eightcol">
-          <canvas
-            id="board"
-            width="600"
-            height="400"
-            oncontextmenu="return false;"
-          >
-            <p>
-              Unfortunately, your browser does not seem to support the canvas
-              element.
-            </p>
-          </canvas>
-
-          <noscript>
-            <p>
-              Unfortunately, your javascript is disabled. You will need to
-              enable it in order to play the game.
-            </p>
-          </noscript>
-        </div>
-        <div class="fourcol last">
-          <div class="startscreen">
-            <h1>Start Game</h1>
-            <p>Please choose a difficulty to get started.</p>
-            <button id="easybtn">Easy</button>
-            <button id="mediumbtn">Medium</button>
-            <button id="insanebtn">Insane</button>
-
-            <h1>Games You Won</h1>
-            <table id="scoreboard">
-              <tr>
-                <th>Name</th>
-                <th>Mines</th>
-                <th>Seconds</th>
-              </tr>
-            </table>
-          </div>
-
-          <div class="gamescreen">
-            <h1 id="status">Game on :)</h1>
-            <p id="msg">Click on a square to start the game!</p>
-            <button id="reset">Reset</button>
-            <button id="switchscreens">Change Difficulty</button>
-            <br />
-            <p><span id="time">0</span> seconds have passed</p>
-            <span id="mines"></span>
-            <span id="flags"></span>
-          </div>
-        </div>
-      </section>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>Minesweeper</title><meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" media="screen" type="text/css" href="css/styles.css" /><link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" /><script src="js/jquery.min.js"></script><script type="text/javascript" src="js/minesweeper.js"></script><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="container"><header class="row"><div class="sixcol"><h1>Minesweeper</h1></div><div class="sixcol last"></div></header><section class="row"><div class="eightcol"><canvas id="board" width="600" height="400" oncontextmenu="return false;" ><p>Unfortunately, your browser does not seem to support the canvas element. </p></canvas><noscript><p>Unfortunately, your javascript is disabled. You will need to enable it in order to play the game. </p></noscript></div><div class="fourcol last"><div class="startscreen"><h1>Start Game</h1><p>Please choose a difficulty to get started.</p><button id="easybtn">Easy</button><button id="mediumbtn">Medium</button><button id="insanebtn">Insane</button><h1>Games You Won</h1><table id="scoreboard"><tr><th>Name</th><th>Mines</th><th>Seconds</th></tr></table></div><div class="gamescreen"><h1 id="status">Game on :)</h1><p id="msg">Click on a square to start the game!</p><button id="reset">Reset</button><button id="switchscreens">Change Difficulty</button><br /><p><span id="time">0</span>seconds have passed</p><span id="mines"></span><span id="flags"></span></div></div></section></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
