--- a/index.html
+++ b/index.html
@@ -1,61 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Monster Tracks</title>
-    <script type="text/javascript" src="Jump_Gamemonetize.js"></script>
-    <meta name="description" content="" />
-    <meta name="google" content="notranslate" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="webapp/fancade.css" />
-    <link rel="icon" href="" />
-  </head>
-  <body id="body">
-    <div id="modal_parent">
-      <div id="modal_content">
-        <span id="modal_close_button">&times;</span>
-        <div id="store_link_modal_content" class="modal_inner"></div>
-        <div id="share_file_modal_content" class="modal_inner"></div>
-      </div>
-    </div>
-    <div id="canvas_border" class="emscripten_border">
-      <div id="play_content" class="middle center">
-        <div class="edge">
-          <div class="box">
-            <div class="black">
-              <img src="webapp/cover.jpg" class="cover" />
-              <p class="title">Monster Tracks</p>
-              <p class="author">TGC</p>
-            </div>
-          </div>
-        </div>
-        <div id="progress_or_play">
-          <progress
-            id="progress"
-            class="loading"
-            value="0"
-            max="100"
-          ></progress>
-        </div>
-        <p class="description"></p>
-      </div>
-      <canvas class="emscripten" id="canvas" tabindex="-1"></canvas>
-      <div id="gradient"></div>
-      <div id="webview_content"></div>
-    </div>
-    <script
-      type="text/javascript"
-      src="webapp/source_min.js"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="text/javascript"
-      src="webapp/index.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Monster Tracks</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><script type="text/javascript" src="Jump_Gamemonetize.js"></script><link rel="stylesheet" href="webapp/fancade.css" /><link rel="stylesheet" href="toast.css" /></head><body id="body"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="modal_parent"><div id="modal_content"><span id="modal_close_button">&times;</span><div id="store_link_modal_content" class="modal_inner"></div><div id="share_file_modal_content" class="modal_inner"></div></div></div><div id="canvas_border" class="emscripten_border"><div id="play_content" class="middle center"><div class="edge"><div class="box"><div class="black"><img src="webapp/cover.jpg" class="cover" /><p class="title">Monster Tracks</p><p class="author">TGC</p></div></div></div><div id="progress_or_play"><progress id="progress" class="loading" value="0" max="100" ></progress></div><p class="description"></p></div><canvas class="emscripten" id="canvas" tabindex="-1"></canvas><div id="gradient"></div><div id="webview_content"></div></div><script type="text/javascript" src="webapp/source_min.js" crossorigin="anonymous" ></script><script type="text/javascript" src="webapp/index.js" crossorigin="anonymous" ></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
