--- a/index.html
+++ b/index.html
@@ -1,87 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Stack Bump 3D</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta content="thumbnail.jpg" property="og:image" />
-    <meta content="#000000" data-react-helmet="true" name="theme-color" />
-    <meta name="title" content="Stack Bump 3D" />
-    <meta
-      name="description"
-      content="Stack Bump 3D is an awesome time-killing game that you'll definitely enjoy. Shoot up the tower to its last block and move on with the next tower. Keep on going until you finish!"
-    />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="language" content="English" />
-    <link href="shared/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="TemplateData56/style.css" />
-    <script src="TemplateData56/UnityProgress.js"></script>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-    <script src="Build/UnityLoader.js"></script>
-    <script>
-      window.rWS = WebSocket;
-      WebSocket = function (url, options) {
-        var split = url.split("://");
-        var prefix = "";
-        switch (split[0].toLowerCase()) {
-          case "ws":
-            prefix = "wss://onebigorange-tmm.tbt.mx/websocket/http://";
-            break;
-          case "wss":
-            prefix = "wss://onebigorange-tmm.tbt.mx/websocket/https://";
-            break;
-          default:
-            prefix = split[0];
-        }
-        return new (Function.prototype.bind.call(
-          window.rWS,
-          null,
-          (split[1].match(/\//g) || []).length === 0
-            ? split[1].includes("?")
-              ? prefix + split[1].replace("?", "/?")
-              : prefix + split[1] + "/"
-            : prefix + split[1],
-          options
-        ))();
-      };
-      var origOpen = XMLHttpRequest.prototype.open;
-      XMLHttpRequest.prototype.open = function (...args) {
-        args[1] = /^http/.test(args[1])
-          ? "https://onebigstatic-tmm.tbt.mx/static/" + args[1]
-          : args[1];
-        origOpen.apply(this, args);
-      };
-      window.origBlob = window.Blob;
-      window.Blob = function (array, options) {
-        if (array[1] instanceof Uint8Array) {
-          array[1] = new TextDecoder("utf-8")
-            .decode(array[1])
-            .replace(
-              /window\.top\.location\.href|window\.location\.href|document\.referrer|document\.URL/g,
-              '"https://storage.y8.com/"'
-            );
-        }
-        return new window.origBlob(array, options);
-      };
-      var gameInstance = UnityLoader.instantiate(
-        "gameContainer",
-        "Build/StackBump-new.json",
-        {
-          onProgress: UnityProgress,
-          Module: {
-            onRuntimeInitialized: function () {
-              UnityProgress(gameInstance, "complete");
-            },
-          },
-        }
-      );
-    </script>
-    <script src="shared/lib.js" type="text/javascript"></script>
-    <script src="shared/gamebreak/gamebreak.js" type="text/javascript"></script>
-  </head>
-  <div class="webgl-content">
-    <div id="gameContainer" style="width: 100vw; height: 100vh"></div>
-  </div>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Stack Bump 3D</title><meta content="#000000" data-react-helmet="true" name="theme-color" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link href="shared/style.css" rel="stylesheet" /><link rel="stylesheet" href="TemplateData56/style.css" /><script src="TemplateData56/UnityProgress.js"></script><script src="Build/UnityLoader.js"></script><script>window.rWS=WebSocket; WebSocket=function (url, options){ var split=url.split("://"); var prefix=""; switch (split[0].toLowerCase()){ case "ws": prefix="wss://onebigorange-tmm.tbt.mx/websocket/http://"; break; case "wss": prefix="wss://onebigorange-tmm.tbt.mx/websocket/https://"; break; default: prefix=split[0];} return new (Function.prototype.bind.call( window.rWS, null, (split[1].match(/\//g) || []).length===0 ? split[1].includes("?") ? prefix + split[1].replace("?", "/?") : prefix + split[1] + "/" : prefix + split[1], options ))();}; var origOpen=XMLHttpRequest.prototype.open; XMLHttpRequest.prototype.open=function (...args){ args[1]=/^http/.test(args[1]) ? "https://onebigstatic-tmm.tbt.mx/static/" + args[1] : args[1]; origOpen.apply(this, args);}; window.origBlob=window.Blob; window.Blob=function (array, options){ if (array[1] instanceof Uint8Array){ array[1]=new TextDecoder("utf-8") .decode(array[1]) .replace( /window\.top\.location\.href|window\.location\.href|document\.referrer|document\.URL/g, '"https://storage.y8.com/"' );} return new window.origBlob(array, options);}; var gameInstance=UnityLoader.instantiate( "gameContainer", "Build/StackBump-new.json", { onProgress: UnityProgress, Module:{ onRuntimeInitialized: function (){ UnityProgress(gameInstance, "complete");},},} ); </script><script src="shared/lib.js" type="text/javascript"></script><script src="shared/gamebreak/gamebreak.js" type="text/javascript"></script><link rel="stylesheet" href="toast.css" /></head><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="webgl-content"><div id="gameContainer" style="width: 100vw; height: 100vh"></div></div><script src="pwa.js"></script><script src="toast.js"></script></html>
