--- a/index.html
+++ b/index.html
@@ -1,57 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
-    <link rel="manifest" href="./site.webmanifest" />
-    <title>SUPERHOT</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body style="margin: 0">
-    <canvas
-      class="emscripten"
-      id="canvas"
-      oncontextmenu="event.preventDefault()"
-      style="width: 100%; height: 100%"
-    ></canvas>
-    <script type="text/javascript">
-      var Module = {
-        TOTAL_MEMORY: 268435456,
-        errorhandler: null, // arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
-        compatibilitycheck: null,
-        dataUrl: "webgl.datagz",
-        codeUrl: "webgl.jsgz",
-        memUrl: "webgl.memgz",
-      };
-    </script>
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
-      </div>
-    </div>
-    <script src="popup.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>SUPERHOT</title><link rel="stylesheet" href="styles.css" /><link rel="stylesheet" href="toast.css" /></head><body style="margin: 0"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" style="width: 100%; height: 100%" ></canvas><script type="text/javascript">var Module={ TOTAL_MEMORY: 268435456, errorhandler: null, compatibilitycheck: null, dataUrl: "webgl.datagz", codeUrl: "webgl.jsgz", memUrl: "webgl.memgz",}; </script><div id="popup" class="popup"><div class="popup-content"><h2 id="popup-title" style="color: blue"></h2><div id="popup-scrollable-content" class="popup-scrollable-content" ></div><div class="popup-buttons"><button id="yesButton" class="popup-button">Yes</button ><button id="noButton" class="popup-button">No</button></div></div></div><script src="popup.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
