--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Tanuki Sunset</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" type="image/x-icon" href="img/cover.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="img/cover.png" />
-    <script src="js/UnityLoader.js"></script>
-    <script>
-      var gameInstance = UnityLoader.instantiate(
-        "gameContainer",
-        "tanuki.json"
-      );
-    </script>
-  </head>
-  <body style="margin: 0; overflow: hidden">
-    <div class="webgl-content">
-      <div
-        id="gameContainer"
-        style="width: 100%; height: 100%; margin: 0"
-      ></div>
-    </div>
-    <script type="text/javascript" src="/js/main.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Tanuki Sunset</title><link rel="stylesheet" href="css/style.css" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><script src="js/UnityLoader.js"></script><script>var gameInstance=UnityLoader.instantiate( "gameContainer", "tanuki.json" ); </script><link rel="stylesheet" href="toast.css" /></head><body style="margin: 0; overflow: hidden"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="webgl-content"><div id="gameContainer" style="width: 100%; height: 100%; margin: 0" ></div></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
